# RetrieveInformation

./: .gitignore  Dockerfile  README.md  convert_data.py  converted_data.json  docker-compose.yml  evaluate_search_methods.py  evaluation_results.json  main.py  pyproject.toml  requirements.txt
datasets/: label.json  queries.json  queries.jsonl
modules/bm25/: bm25.py
modules/huggingface_model/: huggingface_model.py
modules/hybrid/: hybrid_search.py
modules/word2vec/: README.md  example.py  word2vec.py
src/: eval.py  models.py  preprocess.py
weights/huggingface/: embeddings.pkl
