[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Libra"
version = "0.0.1"
description = "NLP project"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.23.1",
    "dotenv",
    "uvicorn",
    "fastapi[all]",
    "pyjwt",
    "pytest",
    "python-json-logger",
    "beautifulsoup4",
]
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true
 
[tool.setuptools.package-data]
where = ["src"]

[tool.ruff]
line-length = 120
# Flake8 - E, F
# pycodestyle - W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"